2003-11-23  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/ChooseParents.py (ChooseParents.__init__): Revert the dialog 
	back to being non-modal (otherwise adding new people is impossible).

2003-11-21  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/po/fr.po: Fix format line. 

2003-11-20  Don Allingham  <dallingham@users.sourceforge.net>
	* src/preferences.glade: make the title on the dialog non-expandable

2003-11-19  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/FamilyView.py: Enable keyboard navigation in Family View. 

2003-11-19  Don Allingham  <dallingham@users.sourceforge.net>
	* src/GrampsCfg.py: Add comment about SUSE naming of gconf
	* src/Relationship.py: detect a RuntimeError exception that occurs
	when we exceed the recursion depth limit. This occurs when a 
	relationship loop is detected
	* src/gramps_main.py: handle relationship loop message
	* src/gramps.py: handle python versions with broken setlocale()
	* src/po/Makefile.am: don't pass -v to msgfmt

2003-11-19  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/NameEdit.py (on_help_clicked): Add function.
	* src/UrlEdit.py (on_help_clicked): Add function.
	* src/gramps.glade: Add hot keys to the family view list labels.
	* src/ChooseParents.py (ModifyParents.__init__): Make the dialog modal
	and a transient for its parent; (ModifyParents.on_help_clicked): Add 
	function; (ChooseParents.__init__): Make the dialog modal and a 
	transient for its parent; (ChooseParents.on_help_clicked): 
	Add function.
	* src/FamilyView.py: Pass the window to the ChooseParents classes.
	* src/Sources.py: (SourceSelector.on_help_clicked, 
	SourceEditor.on_help_clicked): Add functions.
	* src/srcsel.glade: Add Help buttons to dialogs.
	* src/places.glade: Add Help buttons to dialogs.
	* src/EditSource.py (on_help_clicked): Add function.
	* src/EditPlace.py (on_help_clicked): Add function; 
	(__init__): Make the dialog modal and a transient for its parent;
	* src/PlaceView.py: Pass the window to the EditPlace class.