@@ -402,8 +402,9 @@ class XmlWriter:
                     self.g.write('  %s<comment>%s</comment>\n' % (sp,com))
                 self.g.write('%s</witness>\n' % sp)
             else:
+                nm = self.fix(w.get_value())
                 self.g.write('%s<witness>\n' % sp)
-                self.g.write('  %s<name>%s</name>\n' % (sp,w.get_value()))
+                self.g.write('  %s<name>%s</name>\n' % (sp,nm))
                 if com:
                     self.g.write('  %s<comment>%s</comment>\n' % (sp,com))
                 self.g.write('%s</witness>\n' % sp)
